fix dark mode switch style

--- a/src/Resources/app/administration/src/main.scss
+++ b/src/Resources/app/administration/src/main.scss
@@ -54,6 +54,6 @@
     display: flex;
 
     .sw-field--switch {
-        margin: -10px 0 0 5px;
+        margin: 5px 0 0 5px;
     }
 }
